Fix gaps in forecast graph

--- a/src/style.css
+++ b/src/style.css
@@ -248,27 +248,38 @@ li {
   list-style-type: none;
 }
 
-#forecast {
+.forecast {
   position: absolute;
   top: -20px;
   display: flex;
   height: 200%;
   width: 100%;
   /* background-color: white; */
-  background: linear-gradient(rgba(255, 255, 255, 0) 20%, white);
+  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, #000000 80%); */
 }
 
 
-#forecast>li {
+.forecast>li {
   background-color: #f5b952;
   /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
   width: 100%;
   clip-path: polygon(0 100%,
-      0 calc(100% - var(--previous-value)),
-      100% calc(100% - var(--value)),
+      -1px calc(100% - var(--previous-value)),
+      calc(100% + 1px) calc(100% - var(--value)),
       100% 100%);
   stroke: rgb(153 51 102 / 1);
+  padding: 0;
+  margin: 0;
+
+}
+
+.forecast.outline {
+  top: -23px;
+}
+
+.forecast.outline>li {
+  background-color: #000000;
 }
